Changed java parameter